#61 Issue with responsive design on small devices

--- a/templates/themes/base/css/splash.css
+++ b/templates/themes/base/css/splash.css
@@ -74,7 +74,7 @@ video#bgvid {
   background-size: cover;
 }
 
-.login_block{margin:-10px 0 0 48%}
+.login_block{margin:-40px 0 0 48%}
 
 /* Slideshow */
 .window {height:300px;width:590px}
